<resources>
    <string name="app_name">Light Meter</string>
    <string name="iso_string">ISO</string>
    <string name="aperture_string">Aperture</string>
    <string name="shutter_string">Shutter Speed</string>
    <string name="show_iso_dd">Click to Choose ISO</string>
    <string name="show_aperture_dd">Click to Choose Aperture</string>
    <string name="change_mode_to_shutter_p">Switch to Shutter Priority</string>
    <string name="change_mode_to_aperture_p">Switch to Aperture Priority</string>
    <string name="settings">Settings</string>
    <string name="show_shutter_dd">Click to Choose Shutter Speed</string>

    <string name="aperture_prior_title">Aperture Priority</string>
    <string name="shutter_prior_title">Shutter Priority</string>
    <string name="setting_title">Settings</string>
    <string name="aperture_prior_start">Click to enter Aperture Priority</string>
    <string name="shutter_prior_start">Click to enter Shutter Priority</string>
    <string name="settings_start">Click to enter Settings</string>

    <string name="title_activity_aperture">LightMeter - Aperture Priority</string>
    <string name="title_activity_shutter">LightMeter - Shutter Priority</string>
    <string name="title_activity_settings">Settings</string>
    <!--    Strings for settings Menu-->
    <string name="manage_iso_string">Manage Custom ISO Values</string>
    <string name="manage_iso_switch">Click to Edit ISO Values</string>

    <string name="manage_shutter_string">Manage Custom Shutter Speeds</string>
    <string name="manage_shutter_switch">Click to Edit Shutter Speed Values</string>

    <string name="manage_aperture_string">Manage Custom Aperture Values</string>
    <string name="manage_aperture_switch">Click to Edit Custom Aperture Values</string>

    <string name="manage_calibration_string">Manage Calibration Constant</string>
    <string name="manage_calibration_switch">Click to Edit Calibration Constant</string>

    <string name="return_to_meter_string">Return to Menu</string>
    <string name="return_to_meter_switch">Click to Return to Menu</string>

    <string name="add_values">Add Values</string>
    <string name="add_custom_value">Add Custom Value</string>
    <string name="delete_values">Delete Values</string>
    <string name="delete_values_button">Click to Delete a Custom Value</string>
    <string name="current_cust_val">Current Custom Values</string>
    <string name="close_dialogue">Ok</string>
</resources>